--- a/js_module_export.html
+++ b/js_module_export.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>js_module_export</title>
-    <script src="js_module_export_2.js" type="module"></script>
+    <script src="main2.js" type="module"></script>
 </head>
 
 <body>
