--- a/Stephen Grider_TS/web/index.html
+++ b/Stephen Grider_TS/web/index.html
@@ -1,3 +1,6 @@
 <html>
-  <script src="./src/index.ts"></script>
+  <body>
+    <div id="root"></div>
+    <script src="./src/index.ts"></script>
+  </body>
 </html>
